--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 nav {
     display: flex;
     background-color: white;
@@ -21,7 +25,7 @@ nav {
     color: black;
     font-weight: 450;
 }
-    header {
+    section {
         color: black;
         text-align: left;
         padding: 20px;
@@ -81,14 +85,14 @@ nav {
   
       .more-info {
         background-color: white;
-        border: 2px solid aqua;
+        border: 2px solid aquamarine;
         color: black;
         margin-right: 10px;
       }
 
       .contact-us {
-        background-color: aqua;
-        border: 2px solid aqua;
+        background-color: aquamarine;
+        border: 2px solid aquamarine;
         color: black;
       }
 
@@ -128,7 +132,7 @@ nav {
     
         .angka-text p span {
         margin-right: 20px; 
-        border-bottom: 7px solid aqua; 
+        border-bottom: 7px solid aquamarine; 
         padding-bottom: 3px;
         }
 
@@ -148,7 +152,7 @@ nav {
             height: 30px;
             text-align: center;
             color: white;
-            background-color: aqua;
+            background-color: aquamarine;
             border: 3px solid white;
             margin-left: 900px;
           }
@@ -158,6 +162,7 @@ nav {
             height: 150px;
             left: 90px;
             top: 1020px;
+            margin-top: 50px;
             }
         
             .gambar-2 {
@@ -166,6 +171,7 @@ nav {
             height: 150px;
             left: 530px;
             top: 1020px;
+            margin-top: 50px;
             }
         
             .gambar-3 {
@@ -174,6 +180,7 @@ nav {
             height: 150px;
             left: 950px;
             top: 1020px;
+            margin-top: 50px;
             }
         
             .grid-1 {
@@ -189,8 +196,8 @@ nav {
             text-align: center;
             }
               
-            .kotak-1 {
-            font-size: 15px;
+            .kotak1 {
+            font-size: 20px;
             font-weight: bold;
             }
               
@@ -212,8 +219,8 @@ nav {
             text-align: center;
             }
                   
-            .kotak-2 {
-            font-size: 15px;
+            .kotak2 {
+            font-size: 20px;
             font-weight: bold;
             }
                   
@@ -236,7 +243,7 @@ nav {
             }
                       
             .kotak-3 {
-            font-size: 15px;
+            font-size: 17px;
             font-weight: bold;
             }
                       
@@ -274,12 +281,12 @@ nav {
         
             .Location-text {
             position: absolute;
-            top: 1620px; 
+            top: 1540px;
             left: 0px;
             font-size: 30px;
             font-weight: bold;
             color: black;
-            margin-left: 800px;
+            margin-left: 1100px;
             }
                     
             .Location-text p {
@@ -294,14 +301,106 @@ nav {
             position: absolute;
             top: 900px;
             right: 200px; 
-            background-color: aqua;
+            background-color: aquamarine;
             color: white;
-            border: 2px solid aqua;
+            border: 2px solid aquamarine;
             padding: 7px 28px;
             border-radius: 0;
             }
                 
             .contact-us-button-right:hover {
             background-color: white;
-            color: aqua;
+            color: aquamarine;
             }
+
+.sec-form{
+    margin-top: 380px;
+}  
+
+.container{
+    margin-bottom: 80px;
+    margin-right: 650px;
+}
+
+.form-container{
+    font-size: 30px;
+    border: 4px solid aquamarine;
+    width: 450px;
+}
+.form-container label{
+    font-size: 20px;
+    font-weight: 600;
+    
+}
+.form-isi{
+    display:grid;
+    grid-template-columns: auto auto;
+}
+
+.form{
+    display: grid;
+    grid-template-columns: auto;
+    margin: 10px;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid black;
+}
+.form-message{
+    display: grid;
+    grid-template-columns: auto;
+    border-bottom: 2px solid black;
+    margin: 10px;
+}
+.message input{
+    margin: 10px;
+}
+input{
+    width: 125px;
+    outline: none;
+    border: none;
+    margin: 5px;
+}
+.sbm{
+    text-align: center;
+    border: 2px solid aquamarine;
+    background-color: aquamarine;
+    width: 425px;
+    margin: 10px;
+    padding: 5px;
+}
+
+footer{
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: row;
+    padding-left: 125px;
+    padding-right: 125px;
+}
+
+footer h4 {
+    font-size: 60px;
+    font-weight: bold;
+    color: white;
+    margin: 20px;
+}
+
+footer p{
+    font-size: 25px;
+    color: white;
+}
+
+svg {
+    width: 40px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.svg{
+    margin-left: 700px;
+}
+
+.footer{
+    width: 400px;
+}
